--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,8 @@
   </head>
 
   <body>
+    <%= link_to "home", root_path%>
+    <%= link_to "posts", posts_path%>
     <%= yield %>
   </body>
 </html>
