terminando os posts e criando o model do feedback

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,4 +1,4 @@
-<h1>Criado um post %> </h1>
+<h1>Criado um post</h1>
 
     <%= form_with model: @post, data: {type: :hotwire} do |form|%>
         <div class="field">
