--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,10 @@
   </head>
 
   <body>
-    <%= link_to "home", root_path%>
-    <%= link_to "posts", posts_path%>
+    <nav class="navbar bg-primary" data-bs-theme="dark">
+      <%= link_to "home", root_path,class: "btn btn-secondary"%>
+      <%= link_to "posts", posts_path,class: "btn btn-dark"%>
+    </nav>
     <%= yield %>
   </body>
 </html>
