--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Posts</h1>
-
+<%= link_to 'Create', new_post_path,class: "btn btn-success"%>
 <table>
     <thead>
         <tr>
@@ -13,9 +13,9 @@
             <tr>
                 <td><%= post.title %></td>
                 <td><%= post.body %></td>
-                <td><%= link_to 'Show',post %></td>
-                <td><%= link_to 'Edit',edit_post_path(post) %></td>
-                <td><%= button_to 'Delete',post,method: :delete %></td>
+                <td><%= link_to 'Show',post,class: "btn btn-info" %></td>
+                <td><%= link_to 'Edit',edit_post_path(post),class: "btn btn-warning" %></td>
+                <td><%= button_to 'Delete',post,method: :delete,class: "btn btn-danger" %></td>
             </tr>
         <% end %>
     </tbody>
