--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,10 +11,7 @@
   </head>
 
   <body>
-    <nav class="navbar bg-primary" data-bs-theme="dark">
-      <%= link_to "home", root_path,class: "btn btn-secondary"%>
-      <%= link_to "posts", posts_path,class: "btn btn-dark"%>
-    </nav>
+    <%= render "layouts/navbar" %>
     <%= yield %>
   </body>
 </html>
