--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,4 +1,5 @@
 <nav class="navbar bg-primary" data-bs-theme="dark">
       <%= link_to "home", root_path,class: "btn btn-secondary"%>
       <%= link_to "posts", posts_path,class: "btn btn-dark"%>
+      <%= link_to "feedbacks", feedbacks_path,class: "btn btn-dark"%>
 </nav>
